--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+openjpeg (1.3+dfsg-4+squeeze2) squeeze-security; urgency=high
+
+  * Non-maintainer upload by the Security Team.
+  * Fix CVE-2013-6052: information leak.
+  * Fix CVE-2013-6045: multiple heap buffer overflows.
+  * Fix CVE-2013-6054: a heap buffer overflow.
+  * Fix CVE-2013-1447: multiple crashers.
+
+ -- Raphael Geissert <geissert@debian.org>  Sun, 01 Dec 2013 23:51:59 +0100
+
 openjpeg (1.3+dfsg-4+squeeze1) stable-security; urgency=high
 
   * Non-maintainer upload by the Security Team.
