--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+openjpeg (1.3+dfsg-4+squeeze3) squeeze-security; urgency=high
+
+  * Non-maintainer upload by the Security Team.
+  * Fix a regression in the decoding of chroma-subsampled images,
+    introduced by one of the patches for CVE-2013-6045 (Closes: #734238).
+
+ -- Raphael Geissert <geissert@debian.org>  Tue, 22 Apr 2014 23:14:30 +0200
+
 openjpeg (1.3+dfsg-4+squeeze2) squeeze-security; urgency=high
 
   * Non-maintainer upload by the Security Team.
